# zootokenpayment

./: .dockerignore  .env  DEPLOY-HOSTGATOR.md  Dockerfile  HARD_GATING_COMPLETE.md  PROJECTS.md  README.md  TOKEN_FEATURES.md  UPLOAD-TO-GITHUB.md  import-wallet.ts  package-lock.json  package.json  render.yaml  server.js  token-ZOO.json  tsconfig.json  wallet.json
fulcanellie-deploy/: .env.example  CONTROLLED_BURNING.md  DEPLOY-STAKING-API.md  Dockerfile  SOLANA_TOKEN_GUIDE.md  Untitled  VISUALIZATION.md  com.hendrix.fulcanellie.plist  metadata-ZOO.json  package.json  product-configs.example.json  run_fulcanellie_service.sh  upload-to-pinata.ts
fulcanellie-deploy/burn-program/: Anchor.toml  Cargo.toml  README.md
fulcanellie-deploy/src/: test-magnetic-regions.ts
fulcanellie-deploy/staking-program/: Cargo.toml
fulcanellie-earthquake-bot/: .env.example  Dockerfile  README.md  package-lock.json  package.json  run_fulcanellie_service.sh
fulcanellie-earthquake-bot/src/: test-noaa.ts
fulcanellie-woocommerce/: .env.example  .gitignore  DEPLOY-RENDER.md  HARD_STAKING.md  README.md  generate-wallet.ts  package-lock.json  package.json  render.yaml  server.ts  staking-config.json  tsconfig.json  upload-metadata.ts
fulcanellie-woocommerce/routes/: index.ts  staking.ts  zoo.ts
fulcanellie-woocommerce/staking-program/: Anchor.toml
fulcanellie-woocommerce/utils/: config.ts
src/: index.ts  tweet.js  tweet.ts
src/api/: burn-api.example.ts
zoo-solana-checkout-api/: .env.example  package-lock.json  package.json  render.yaml  server.js  token-ZOO.json
(+56 files in other folders)
