[package]
name = "zoostaking"
version = "0.1.0"
description = "ZOO Token Staking Program - Hard Gating"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zoostaking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"






